<?xml version="1.0"?>
<package format="3">
  <name>gamepad_master2ik</name>
  <version>0.0.1</version>
  <description>Gamepad to Master2Ik bridge node</description>

  <maintainer email="lwj@example.com">lwj</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>humanoid_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
